--- a/input.css
+++ b/input.css
@@ -9,6 +9,7 @@
 
 html{
     scrollbar-width: thin;
+    scroll-behavior: smooth;
 }
 
 body{
@@ -18,6 +19,22 @@ body{
 .card{
     @apply border border-gray-100 bg-gradient-to-tl from-white/5 to-white/10 transition-all duration-300 ease-out translate-y-0 shadow-none hover:-translate-y-1.5 hover:shadow-xl
 }
+
+#error-modal[open] {
+  animation: zoomIn 0.3s ease-out forwards;
+}
+
+@keyframes zoomIn {
+    from { 
+        opacity: 0; 
+        transform: scale(0); 
+    }
+    to { 
+        opacity: 1; 
+        transform: scale(1); 
+    }
+}
+
 
 #error-modal::backdrop{
     @apply backdrop-blur-sm bg-black/40
